<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserDetail">

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <Spinner
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:entries="@array/state_arrays"
        android:prompt="@string/locations"/>
    <Spinner
        android:id="@+id/language"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:entries="@array/language_arrays"
        android:prompt="@string/language"/>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/colorAccent"
        android:hint="@string/data"
        android:textColor="@color/textColor"
        tools:layout_editor_absoluteX="49dp"
        tools:layout_editor_absoluteY="207dp" />

</LinearLayout>